# bloxcode-ai

./: .gitignore  CHANGELOG-v4.1.md  Cargo.toml  README.md  package.json
crates/bloxcode-core/: Cargo.toml
crates/bloxcode-core/src/: config.rs  lib.rs  streaming.rs  tools.rs
crates/bloxcode-sandbox/: Cargo.toml
crates/bloxcode-sandbox/src/: lib.rs
crates/bloxcode-tui/: Cargo.toml
crates/bloxcode-tui/src/: main.rs
src/: index.js
src/agents/: agent.js
src/config/: state.js
src/core/: ansi.js  context.js  hooks.js  input.js  markdown.js
src/mcp/: client.js
src/providers/: api.js  router.js
src/tools/: files.js  registry.js  shell.js  undo.js  web.js
src/tui/: box.js  dialogs.js
