[workspace]
resolver = "2"
members = [
  "crates/bloxcode-tui",
  "crates/bloxcode-core",
  "crates/bloxcode-sandbox",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Pedrinfnf/bloxcode-ai"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
