[package]
name = "bloxcode-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bloxcode-tui"
path = "src/main.rs"

[dependencies]
bloxcode-core = { path = "../bloxcode-core" }
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
clap.workspace = true
